26 March 2004 Radu Ursu
-made doc work with the current implementation of the Manual tools

10 February 2004 Radu Ursu
-Updated headers in examples

5.162 (28 Nov 2003) [rursu]
- _Polyhedron_iterator -> I_HalfedgeDS_iterator
- I_Polyhedron_iterator -> I_HalfedgeDS_iterator
- I_Polyhedron_const_iterator -> I_HalfedgeDS_const_iterator

5.161 (14 Oct 2003) [af]
- Fixed typos in the documentation

5.159 (03 Oct 2003) [rursu]
- Provided a direct way to perform snapping when entering new segments

5.155 (30 Sep 2003) [af]
- Moved \chapter to main.tex

5.154 (24 Sep 2003) [rursu]
- Modified the name in planar_map.C and added the planar_map.vcproj

5.153 (12 Sep 2003) [af]
- Removed Polygon_traits

- Workaround for SunPro 5.4/5.5 ICE: Moved nested class Token out of the class scope [af]

5.48 (Susan)
===
- copied dcel.gif and dcel.ipe to Topological_map_ref directory; added 
  htmlfiles there

5.48 (Susan)
===
- moved doc_tex/*_ref directory up one level

5.47 (Susan)
===
- made changes necessary to do the manual split

5.46 (Shai and Eti)
===
- As of this internal release, only big changes will be written
  in changes.txt due to the use of CVS.
- Introducing new I/O utilities.
- New copy constructor for Planar_map.
- Updated assignment operator for Planar_map. 

5.45 (Shai)
====
- Change variable 'or' in Pm_leda_segment_exact_traits to 'orient'.

5.44 (Oren)
====
- Fix for newer version of CYGWIN, for Planar map testing.

5.43 (Shai)
====
- Changed test -e conditional to test -f in cgal_test.

5.42 (Shai)
====
- Fixes and updates in documentation of both tpm and pm.

5.41 (Oren)
====
- Fixes in test/numrep[12].h for robustness, namely we use 
  Leda_integer Homogenous coord type as TESTR 2 instead of double Homogenous.
  Changes in the DATA files accordingly
- cgal_test and tests updated to support LEDA and GMPZ missing installations
  situation.
- Pm_straight_exact_traits.h doesn't assume == for bounding boxes.

5.40 (Shai)
====