@@ -1,3 +1,7 @@
+17 May 2004 Menelaos Karavelas
+- replaced Point by Point_2 in the demo in order to resolve clash with
+  the Mac version of Qt
+
 26 March 2004 Radu Ursu
 -made doc work with the current implementation of the Manual tools
 
